codex-rs/tui/src/snapshots/codex_tui__app__agents_overview__tests__agents_overview_attention.snap
---
source: tui/src/app/agents_overview_tests.rs
expression: "render_bottom_popup(&app.chat_widget,\n96).replace(&format!(\"{project}  2\"),\n&normalized_group).replace(&project, \"/tmp/project\")"
---
  Agent command center
  1 need input   0 working   0 ready
  ────────────────────────────────────────────────────────────────────────────────────────────
  /tmp/project  2                                     │ Task details
  › ● Repair authentication  Needs input              │
    ✓ Investigate parser  Finished                    │ Repair authentication
                                                      │ ● Needs input
                                                      │
                                                      │ Agent: Check dependencies
                                                      │ Which dependency version should I use?
                                                      │ Open task to review.
                                                      │ Waiting for approval.
                                                      │ Waiting for your response.
                                                      │
                                                      │ Project
                                                      │ /tmp/project
                                                      │
                                                      │ Prompt
                                                      │ Repair authentication
  New task
────────────────────────────────────────────────────────────────────────────────────────────────
› Describe a new task
────────────────────────────────────────────────────────────────────────────────────────────────
   enter create task    ctrl+j newline    esc tasks
